@@ -1,3 +1,8 @@
+2008-01-09  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* releases.xml.in:
+	Updated as release team has decided about new module inclusion.
+
 2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* releases.xml.in:
